Fixing Navigation header styling on mobile

--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -14,7 +14,7 @@
 	--buttonBoxShadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
 	--buttonBoxShadowHover: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-	--scrollMarginTop: 9rem;
+	--scrollMarginTop: 5rem;
 
 	--swiper-navigation-color: #696969;
 	--swiper-pagination-color: #696969;
@@ -154,27 +154,7 @@ button {
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-	.display-mobile {
-		display: block;
-	}
-
-	.show-on-mobile {
-		display: block;
-	}
-
-	.hide-544 {
-		display: none;
-	}
-
 	.show-on-tablet {
-		display: none !important;
-	}
-
-	.hide-on-desktop {
-		display: block;
-	}
-
-	.show-on-desktop {
 		display: none !important;
 	}
 
@@ -182,17 +162,12 @@ button {
 		display: none;
 	}
 
-	.hide-mobile,
-	.display-tablet {
+	.hide-mobile {
 		display: none;
 	}
 
 	.bold {
 		font-weight: 600;
-	}
-
-	.bold500 {
-		font-weight: 500;
 	}
 
 	.dirt-bg-img {
@@ -375,28 +350,9 @@ button {
 	}
 }
 
-/** 544 px */
-@media only screen and (min-width: 34rem) {
-	.hide-544 {
-		display: block !important;
-	}
-}
-
 /* Table - 768px */
 @media only screen and (min-width: 48rem) {
 	.show-on-tablet {
-		display: block !important;
-	}
-
-	.show-on-mobile {
-		display: none !important;
-	}
-
-	.hide-tablet {
-		display: none !important;
-	}
-
-	.display-tablet {
 		display: block !important;
 	}
 
@@ -412,24 +368,8 @@ button {
 		display: none !important;
 	}
 
-	.hide-on-desktop {
-		display: none !important;
-	}
-
-	.show-on-desktop {
-		display: flex !important;
-	}
-
 	.hide-mobile {
 		display: block !important;
-	}
-
-	.display-mobile {
-		display: none !important;
-	}
-
-	.hide-desktop {
-		display: none;
 	}
 
 	.container {
